* update linux-g4 to 5.17.5.arch1-1

--- a/linux-g4/config
+++ b/linux-g4/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.17.0-arch1 Kernel Configuration
+# Linux/powerpc 5.17.3-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
 CONFIG_CC_IS_GCC=y
@@ -3055,7 +3055,7 @@ CONFIG_RT2800USB_RT35XX=y
 CONFIG_RT2800USB_RT3573=y
 CONFIG_RT2800USB_RT53XX=y
 CONFIG_RT2800USB_RT55XX=y
-# CONFIG_RT2800USB_UNKNOWN is not set
+CONFIG_RT2800USB_UNKNOWN=y
 CONFIG_RT2800_LIB=m
 CONFIG_RT2800_LIB_MMIO=m
 CONFIG_RT2X00_LIB_MMIO=m
@@ -3088,7 +3088,7 @@ CONFIG_RTL8192C_COMMON=m
 CONFIG_RTL8723_COMMON=m
 CONFIG_RTLBTCOEXIST=m
 CONFIG_RTL8XXXU=m
-# CONFIG_RTL8XXXU_UNTESTED is not set
+CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RTW88=m
 CONFIG_RTW88_CORE=m
 CONFIG_RTW88_PCI=m
@@ -3102,7 +3102,12 @@ CONFIG_RTW88_8723DE=m
 CONFIG_RTW88_8821CE=m
 # CONFIG_RTW88_DEBUG is not set
 # CONFIG_RTW88_DEBUGFS is not set
-# CONFIG_RTW89 is not set
+CONFIG_RTW89=m
+CONFIG_RTW89_CORE=m
+CONFIG_RTW89_PCI=m
+CONFIG_RTW89_8852AE=m
+# CONFIG_RTW89_DEBUGMSG is not set
+# CONFIG_RTW89_DEBUGFS is not set
 CONFIG_WLAN_VENDOR_RSI=y
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
@@ -3132,10 +3137,10 @@ CONFIG_HDLC_RAW_ETH=m
 CONFIG_HDLC_CISCO=m
 CONFIG_HDLC_FR=m
 CONFIG_HDLC_PPP=m
-# CONFIG_HDLC_X25 is not set
+CONFIG_HDLC_X25=m
 CONFIG_PCI200SYN=m
 CONFIG_WANXL=m
-# CONFIG_PC300TOO is not set
+CONFIG_PC300TOO=m
 CONFIG_FARSYNC=m
 CONFIG_FSL_UCC_HDLC=m
 CONFIG_IEEE802154_DRIVERS=m
@@ -3152,10 +3157,7 @@ CONFIG_IEEE802154_HWSIM=m
 #
 # Wireless WAN
 #
-CONFIG_WWAN=y
-# CONFIG_WWAN_HWSIM is not set
-CONFIG_MHI_WWAN_CTRL=m
-# CONFIG_MHI_WWAN_MBIM is not set
+# CONFIG_WWAN is not set
 # end of Wireless WAN
 
 # CONFIG_VMXNET3 is not set
@@ -6399,10 +6401,14 @@ CONFIG_VHOST_VSOCK=m
 # CONFIG_GREYBUS is not set
 # CONFIG_COMEDI is not set
 CONFIG_STAGING=y
-# CONFIG_PRISM2_USB is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
+CONFIG_PRISM2_USB=m
+CONFIG_RTL8192U=m
+CONFIG_RTLLIB=m
+CONFIG_RTLLIB_CRYPTO_CCMP=m
+CONFIG_RTLLIB_CRYPTO_TKIP=m
+CONFIG_RTLLIB_CRYPTO_WEP=m
+CONFIG_RTL8192E=m
+CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
 CONFIG_R8188EU=m
 # CONFIG_RTS5208 is not set
@@ -6465,7 +6471,7 @@ CONFIG_R8188EU=m
 # end of Resolver to digital converters
 # end of IIO staging drivers
 
-# CONFIG_FB_SM750 is not set
+CONFIG_FB_SM750=m
 # CONFIG_STAGING_MEDIA is not set
 
 #
@@ -6475,16 +6481,49 @@ CONFIG_R8188EU=m
 
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
-# CONFIG_FIREWIRE_SERIAL is not set
-# CONFIG_GS_FPGABOOT is not set
+CONFIG_FIREWIRE_SERIAL=m
+CONFIG_FWTTY_MAX_TOTAL_PORTS=64
+CONFIG_FWTTY_MAX_CARD_PORTS=32
+CONFIG_GS_FPGABOOT=m
 # CONFIG_UNISYSSPAR is not set
 CONFIG_COMMON_CLK_XLNX_CLKWZRD=m
-# CONFIG_FB_TFT is not set
+CONFIG_FB_TFT=m
+CONFIG_FB_TFT_AGM1264K_FL=m
+CONFIG_FB_TFT_BD663474=m
+CONFIG_FB_TFT_HX8340BN=m
+CONFIG_FB_TFT_HX8347D=m
+CONFIG_FB_TFT_HX8353D=m
+CONFIG_FB_TFT_HX8357D=m
+CONFIG_FB_TFT_ILI9163=m
+CONFIG_FB_TFT_ILI9320=m
+CONFIG_FB_TFT_ILI9325=m
+CONFIG_FB_TFT_ILI9340=m
+CONFIG_FB_TFT_ILI9341=m
+CONFIG_FB_TFT_ILI9481=m
+CONFIG_FB_TFT_ILI9486=m
+CONFIG_FB_TFT_PCD8544=m
+CONFIG_FB_TFT_RA8875=m
+CONFIG_FB_TFT_S6D02A1=m
+CONFIG_FB_TFT_S6D1121=m
+CONFIG_FB_TFT_SEPS525=m
+CONFIG_FB_TFT_SH1106=m
+CONFIG_FB_TFT_SSD1289=m
+CONFIG_FB_TFT_SSD1305=m
+CONFIG_FB_TFT_SSD1306=m
+CONFIG_FB_TFT_SSD1331=m
+CONFIG_FB_TFT_SSD1351=m
+CONFIG_FB_TFT_ST7735R=m
+CONFIG_FB_TFT_ST7789V=m
+CONFIG_FB_TFT_TINYLCD=m
+CONFIG_FB_TFT_TLS8204=m
+CONFIG_FB_TFT_UC1611=m
+CONFIG_FB_TFT_UC1701=m
+CONFIG_FB_TFT_UPD161704=m
 # CONFIG_KS7010 is not set
 # CONFIG_PI433 is not set
 # CONFIG_XIL_AXIS_FIFO is not set
 # CONFIG_FIELDBUS_DEV is not set
-CONFIG_QLGE=m
+CONFIG_QLGE=y
 CONFIG_WFX=m
 # CONFIG_GOLDFISH is not set
 CONFIG_HAVE_CLK=y
