--- a/linux-g4/PKGBUILD
+++ b/linux-g4/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux-g4
-pkgver=5.17.3.arch1
+pkgver=5.17.5.arch1
 pkgrel=1
 pkgdesc='Linux (G4 optimized)'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -26,7 +26,7 @@ validpgpkeys=(
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
 )
 sha256sums=('SKIP'
-            '001730cc9f997836b6999a8c0dc9874dd3e95c5fc788940ddf32511c1f24d012'
+            'ea265db8323feec541003995aca54b2c92c8e1663f43bedae0f4aeebe0101924'
             'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38'
             '07dbbf3e8f743e8d2ad90891a8b567392271db139e339529df1ab4387e0e6400')
 
@@ -94,8 +94,6 @@ _package() {
 
 _package-headers() {
   pkgdesc="Headers and scripts for building modules for the $pkgdesc kernel"
-  provides=('linux-headers')
-  conflicts=('linux-headers')
 
   cd $_srcname
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
@@ -106,10 +104,6 @@ _package-headers() {
   install -Dt "$builddir/kernel" -m644 kernel/Makefile
   install -Dt "$builddir/arch/${MYARCH}" -m644 arch/${MYARCH}/Makefile
   cp -t "$builddir" -a scripts
-
-  # add objtool for external module building and enabled VALIDATION_STACK option
-  [ "${CARCH}" == "x86_64" ] && \
-    install -Dt "$builddir/tools/objtool" tools/objtool/objtool
 
   # add xfs and shmem for aufs building
   mkdir -p "$builddir"/{fs/xfs,mm}
@@ -149,6 +143,9 @@ _package-headers() {
 
   echo "Removing loose objects..."
   find "$builddir" -type f -name '*.o' -printf 'Removing %P\n' -delete
+
+  echo "Restoring objects for external module builds..."
+  install -Dt "$builddir/arch/${MYARCH}/lib" -m644 arch/${MYARCH}/lib/crtsavres.o
 
   echo "Stripping build tools..."
   local file
