* update linux-lts to 5.10.113-1

--- a/linux-lts/PKGBUILD
+++ b/linux-lts/PKGBUILD
@@ -1,7 +1,7 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 pkgbase=linux-lts
-pkgver=5.10.111
+pkgver=5.10.113
 pkgrel=1
 pkgdesc='LTS Linux'
 url="https://www.kernel.org/"
@@ -29,7 +29,7 @@ validpgpkeys=(
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
 )
 # https://www.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc
-sha256sums=('1831b3d8765592ce91e51441bb179d908f6bcfe8c78d03c2bec8c675c4a0ab1a'
+sha256sums=('82516a02bb52456f6e8057217dde6e02b78003b1e058117557c2ae9661696dfc'
             'SKIP'
             'c20e7c28c5d3e765b80d879091ea91bbc5e750d33b790bb924c9dbaca44e9161'
             '757de36deaf362ff2ddaed23b653b4590646abe154379cf91360f58d5ce002f8'
@@ -156,6 +156,13 @@ _package-headers() {
 
   echo "Removing loose objects..."
   find "$builddir" -type f -name '*.o' -printf 'Removing %P\n' -delete
+
+  case "${CARCH}" in
+    powerpc)
+      echo "Restoring objects for external module builds..."
+      install -Dt "$builddir/arch/${MYARCH}/lib" -m644 arch/${MYARCH}/lib/crtsavres.o
+    ;;
+  esac
 
   echo "Stripping build tools..."
   local file
