--- a/kde/plasma-framework/PKGBUILD
+++ b/kde/plasma-framework/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=plasma-framework
-pkgver=5.92.0
-pkgrel=2
+pkgver=5.93.0
+pkgrel=4
 pkgdesc='Plasma library and runtime components based upon KF5 and Qt5'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
@@ -14,15 +14,21 @@ depends=(kactivities kdeclarative kwayland kirigami2)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc kdoctools doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
-        https://invent.kde.org/frameworks/plasma-framework/-/commit/7352045b.patch)
-sha256sums=('c6c2bc624564c74fd80bce170a1c763803d5207ef86108b5724fcba73c3506f7'
+        https://invent.kde.org/frameworks/plasma-framework/-/commit/b62d83be.patch
+        https://invent.kde.org/frameworks/plasma-framework/-/commit/aec00b32.patch
+        https://invent.kde.org/frameworks/plasma-framework/-/commit/734b956c.patch)
+sha256sums=('d4a2c687ea2ea8dfe7c256eb58441fc458102ed4b445dc24685513dd96b5c322'
             'SKIP'
-            '50d0ff124f5c8fb79179753f2e71b2491ffbbc99d27c1ed62f8cdf4a69f8bb17')
+            '441555e3bda01c0f6d13985df8b033df7661b1410817b85a18e595250369b68e'
+            'edd14e81c42f5a8bac2d2e686d8aa6a02a03e67020b85dd30f6864ceb591aeaa'
+            'fcf0227e0794678b1da9497d109bafdf148fee0f7dc88420ea25dc3ad5c0bb3a')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
 
 prepare() {
-  patch -d $pkgname-$pkgver -p1 < 7352045b.patch # Fix visual regression
+  patch -d $pkgname-$pkgver -p1 < b62d83be.patch # Fix plasmoid sizes
+  patch -d $pkgname-$pkgver -p1 < aec00b32.patch # Fix OSD position
+  patch -d $pkgname-$pkgver -p1 < 734b956c.patch # Fix highlight in some applets
 }
 
 build() {
