* update groff to 1.22.4-7

--- a/groff/PKGBUILD
+++ b/groff/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=groff
 pkgver=1.22.4
-pkgrel=6
+pkgrel=7
 pkgdesc='GNU troff text-formatting system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/groff/groff.html'
 license=('GPL')
 groups=('base-devel')
 depends=('perl' 'gcc-libs')
-makedepends=('netpbm' 'libxaw' 'perl-file-homedir')
+makedepends=('netpbm' 'psutils'  'libxaw' 'perl-file-homedir')
 optdepends=('netpbm: for use together with man -H command interaction in browsers'
             'psutils: for use together with man -H command interaction in browsers'
             'libxaw: for gxditview'
