--- a/adwaita-icon-theme/PKGBUILD
+++ b/adwaita-icon-theme/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=adwaita-icon-theme
-pkgver=41.0
+pkgver=42.0+r1+gc144c3d75
 pkgrel=1
 pkgdesc="GNOME standard icons"
 url="https://gitlab.gnome.org/GNOME/adwaita-icon-theme"
@@ -12,13 +12,13 @@ arch=(any)
 license=(LGPL3 CCPL:by-sa)
 depends=(hicolor-icon-theme gtk-update-icon-cache librsvg)
 makedepends=(git gtk3)
-_commit=8670d0eb2414c1ac16d927da5d1a22142ba5e346  # tags/41.0^0
+_commit=c144c3d75711e62c7e885ec483159ed9421f5c10  # gnome-42
 source=("git+https://gitlab.gnome.org/GNOME/adwaita-icon-theme.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd $pkgname
-  git describe --tags | sed 's/\.rc/rc/;s/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
