--- a/directx-headers/PKGBUILD
+++ b/directx-headers/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=directx-headers
 pkgdesc="DirectX headers for using D3D12"
-pkgver=1.4.9
+pkgver=1.600.10
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 makedepends=('meson')
 url="https://github.com/microsoft/DirectX-Headers"
 license=('MIT')
-source=(https://github.com/microsoft/DirectX-Headers/archive/refs/tags/v${pkgver}.tar.gz)
-sha256sums=('a30fb05ba012343a7aa42afb5c32c6474f15c18d3650438ecee7ce2092806195')
+source=(directx-headers-${pkgver}.tar.gz::https://github.com/microsoft/DirectX-Headers/archive/refs/tags/v${pkgver}.tar.gz)
+sha256sums=('7e3814ef45aef6083920e19546a307b3292dca1f7bca8af2a67c72c6df4c7e33')
 
 build() {
   # LTO breaks mesa...
@@ -24,4 +24,7 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" meson install -C build
+
+  install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" DirectX-Headers-$pkgver/LICENSE
 }
+
