* update chromium to 101.0.4951.41-1

--- a/chromium/PKGBUILD
+++ b/chromium/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=chromium
-pkgver=100.0.4896.127
-pkgrel=2
+pkgver=101.0.4951.41
+pkgrel=1
 _launcher_ver=8
 _gcc_patchset=4
 pkgdesc="A web browser built for speed, simplicity, and security"
@@ -16,7 +16,7 @@ depends=('gtk3' 'nss' 'alsa-lib' 'xdg-utils' 'libxss' 'libcups' 'libgcrypt'
          'ttf-liberation' 'systemd' 'dbus' 'libpulse' 'pciutils' 'libva'
          'desktop-file-utils' 'hicolor-icon-theme')
 makedepends=('python' 'gn' 'ninja' 'clang' 'lld' 'gperf' 'nodejs' 'pipewire'
-             'java-runtime-headless=11')
+             'java-runtime-headless')
 optdepends=('pipewire: WebRTC desktop sharing under Wayland'
             'kdialog: support for native dialogs in Plasma'
             'org.freedesktop.secrets: password storage backend on GNOME / Xfce'
@@ -25,8 +25,7 @@ options=('!lto') # Chromium adds its own flags for ThinLTO
 source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgname-$pkgver.tar.xz
         https://github.com/foutrelis/chromium-launcher/archive/v$_launcher_ver/chromium-launcher-$_launcher_ver.tar.gz
         https://github.com/stha09/chromium-patches/releases/download/chromium-${pkgver%%.*}-patchset-$_gcc_patchset/chromium-${pkgver%%.*}-patchset-$_gcc_patchset.tar.xz
-        webcodecs-stop-using-AudioOpusEncoder.patch
-        webrtc-check-existence-of-cursor-metadata.patch
+        chromium-libxml-unbundle.patch
         enable-GlobalMediaControlsCastStartStop.patch
         sql-make-VirtualCursor-standard-layout-type.patch
         use-oauth2-client-switches-as-default.patch
@@ -35,16 +34,13 @@ source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgn
         xxx-ppc64le-sandbox-linux-stat.patch
         xxx-ppc64le-support.patch
         xxx-ppc64le-swiftshader.patch
-        chromium-93-ffmpeg-4.4.patch
         fix-narrowing-cast.patch
         fix-gnu-libc-version-usage.patch
         fix-missing-TEMP_FAILURE_RETRY-macro.patch
         chromium-revert-drop-of-system-java.patch
         chromium-system-nodejs.patch
-        unbundle-ffmpeg-av_stream_get_first_dts.patch
         unbundled-cross-toolchain.patch
         cursed^Uscoped_file.patch
-        chromium-100-SCTHashdanceMetadata-move.patch
         remove-sys-cdefs-includes.patch
         sandbox-membarrier.patch
         sandbox-sched_getparam.patch
@@ -52,29 +48,25 @@ source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgn
         browser-size_t.patch
         fix-swiftshader-llvm-musl-config.patch
         libc_malloc.patch)
-sha256sums=('4710e3453c972c91e68a21f6b0b76ba73d4d617f299a5208615ed6e41b1af84d'
+sha256sums=('099863882e88b9a035fcb6b63dd5288554f6b27558e0ebce93e0d804465efa37'
             '213e50f48b67feb4441078d50b0fd431df34323be15be97c55302d3fdac4483a'
-            'a6120e7d4eb5e131b87b6ab3b922e0c6cd78e15501e54cfb2019875173688d80'
-            '064daaa2b9d95b96ec04d8ddebf4af441f92263d123365b58fe73966866080af'
-            '88b2c8d9c6c1917f6632453f18aad7a3fd94d605eecb6c77ae2394ac5856ba95'
+            '8ed519d21ccd8b382ddd384e9c15306a60d2e3495f48a62dea07c9be9bbffebd'
+            'fd3bf124aacc45f2d0a4f1dd86303fa7f2a3d4f4eeaf33854631d6cb39e12485'
             '779fb13f2494209d3a7f1f23a823e59b9dded601866d3ab095937a1a04e19ac6'
             'b94b2e88f63cfb7087486508b8139599c89f96d7a4181c61fec4b4e250ca327a'
             'e393174d7695d0bafed69e868c5fbfecf07aa6969f3b64596d0bae8b067e1711'
             'eb1b0b261d17fe333a532001742e840cf6f1fdd21af2093636f2c58e8103c002'
             '6b7ad5cd5d7d61b5441810688fc5bd99cb8198291b2252451d352a620a2e09bb'
             '16361d737c14135e464bf52e09d0b79c0e9ef84c364253e08f435e8e72d7b5c9'
-            'b76d253de156ad0277493dda6b7ab11de3f90ea03316745d84082d52018c82f9'
+            '86894dd82035288b69a5f2f1558a02c1c653963b71ea1323491ac42730cae237'
             'be9416182beb25f0835bae1dad5a26786f694dbda2e5106f83714be42add653a'
-            '1a9e074f417f8ffd78bcd6874d8e2e74a239905bf662f76a7755fa40dc476b57'
             '771395e3e84a4a1627945112b8c100c898221e04d86b76d4cff946530010e1a4'
             '320794a9d5a376e34f223805018160fb7a202d98a7c6080737e7de3b86b8d583'
             '0f945626f07a6eda7e3bea956397c79e3e67a5a4ba55e86553a9132792513fa1'
             '4f74164ad790b00389565c638bf3e752017ca7ef4bb77a86a17b6e498de501de'
             'd6dc5081c74f9025e672ea5fde6629b8d53157e0d0528e3a41004250fdf823be'
-            '1f0c1a7a1eb67d91765c9f28df815f58e1c6dc7b37d0acd4d68cac8e5515786c'
             'c25d166fdd7d7b4e1065c23955dc887a49cf78238c756e51c614999d5c48354e'
             '6cfec4a32160df642ffa4b3c1e10ba19e94f1004bac65a349fa273b0f684b8ac'
-            '37e4fc4794b4d0d8e73f1de08b0349c2c8b336abcc543a8933bddd3a28f95863'
             '649640f75a3da1b5e7d9a03a4b3e71ee2bac6fda2ba62cf9535a6fc8b31f308e'
             'ba514c06cc03d728d2c1727fac85f2bbe953fe9720dcf8c2fa8de0ae4385e33b'
             'f5961ae09ddbdda69713d82e631bc3dab4884629f32f60ba201189c2c4269b39'
@@ -136,9 +128,8 @@ prepare() {
   # runtime -- this allows signing into Chromium without baked-in values
   patch -Np1 -i ../use-oauth2-client-switches-as-default.patch
 
-  # Upstream fixes
-  patch -Np1 -i ../webcodecs-stop-using-AudioOpusEncoder.patch
-  patch -Np1 -d third_party/webrtc <../webrtc-check-existence-of-cursor-metadata.patch
+  # https://chromium-review.googlesource.com/c/chromium/src/+/3488058
+  patch -Np1 -i ../chromium-libxml-unbundle.patch
 
   # Revert kGlobalMediaControlsCastStartStop enabled by default
   # https://crbug.com/1314342
@@ -156,13 +147,10 @@ prepare() {
   patch -Np1 -i ${srcdir}/fix-narrowing-cast.patch
   patch -Np1 -i ${srcdir}/fix-gnu-libc-version-usage.patch
   patch -Np1 -i ${srcdir}/fix-missing-TEMP_FAILURE_RETRY-macro.patch
-  #patch -Np1 -i ${srcdir}/chromium-93-ffmpeg-4.4.patch
   patch -Np1 -i ${srcdir}/chromium-revert-drop-of-system-java.patch
   patch -Np1 -i ${srcdir}/chromium-system-nodejs.patch
-  #patch -Np1 -i ${srcdir}/unbundle-ffmpeg-av_stream_get_first_dts.patch
   patch -Np1 -i ${srcdir}/unbundled-cross-toolchain.patch
   patch -Np1 -i ${srcdir}/cursed^Uscoped_file.patch
-  patch -Np1 -i ${srcdir}/chromium-100-SCTHashdanceMetadata-move.patch
   patch -Np1 -i ${srcdir}/remove-sys-cdefs-includes.patch
   patch -Np1 -i ${srcdir}/sandbox-membarrier.patch
   patch -Np1 -i ${srcdir}/sandbox-sched_getparam.patch
