--- a/strace/PKGBUILD
+++ b/strace/PKGBUILD
@@ -3,15 +3,15 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=strace
-pkgver=5.14
+pkgver=5.17
 pkgrel=1
 pkgdesc='A diagnostic, debugging and instructional userspace tracer'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://strace.io/'
 license=(BSD)
 depends=(perl libunwind)
 source=(https://github.com/strace/strace/releases/download/v$pkgver/strace-$pkgver.tar.xz{,.asc})
-sha1sums=('6625b01b18c3940cd926c85e4d1feb10f162973d'
+sha1sums=('4e0622ec2f1551f96ba6abb0145737b91fda4509'
           'SKIP')
 validpgpkeys=('296D6F29A020808E8717A8842DB5BD89A340AEB7') # Dmitry V. Levin <ldv@altlinux.org>
 
