--- a/kde/kde-cli-tools/PKGBUILD
+++ b/kde/kde-cli-tools/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=kde-cli-tools
 pkgver=5.24.4
 pkgrel=1
 pkgdesc='Tools based on KDE Frameworks 5 to better interact with the system'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(kdesu kcmutils kactivities)
