--- a/gd/PKGBUILD
+++ b/gd/PKGBUILD
@@ -3,18 +3,18 @@
 
 pkgname=gd
 pkgver=2.3.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Library for the dynamic creation of images by programmers"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libgd.github.io/"
 license=('custom')
-depends=('fontconfig' 'libxpm' 'libwebp') # 'libavif' 'libheif')
+depends=('fontconfig' 'libxpm' 'libwebp' 'libavif' 'libheif')
 optdepends=('perl: bdftogd script')
 checkdepends=('ttf-liberation')
 source=("https://github.com/libgd/libgd/archive/${pkgname}-${pkgver}.tar.gz"
         'https://github.com/libgd/libgd/commit/bdc281eadb1d58d5c0c7bbc1125ee4674256df08.patch')
 sha256sums=('24429f9d0dbe0f865aaa4b1a63558242396ba9134e6cfd32ca5e486a84483350'
-            '2ae91e3e018440c74c1628bac5deed2851234f2b5bfea49bf805312c64d0115e')
+            '1e7bdb17e76ad6b1384222b449b9011ee131d3e1f105f9b30495a9c34b2cd5eb')
 
 prepare() {
   cd libgd-${pkgname}-${pkgver}
