--- a/tre/PKGBUILD
+++ b/tre/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgname=tre
 pkgver=0.8.0
-pkgrel=6
-arch=( x86_64 powerpc64le powerpc )
+pkgrel=6.1
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="POSIX compliant regexp matching library. Includes agrep for approximate grepping."
 url="https://laurikari.net/tre"
 depends=('glibc')
