* update cbindgen to 0.23.0-1

--- a/cbindgen/PKGBUILD
+++ b/cbindgen/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=cbindgen
-pkgver=0.21.0
+pkgver=0.23.0
 pkgrel=1
 pkgdesc="A tool for generating C bindings to Rust code"
 url="https://github.com/eqrion/cbindgen"
@@ -11,12 +11,16 @@ license=(MPL2)
 depends=(gcc-libs)
 makedepends=(cargo git)
 checkdepends=(cython)
-_commit=b3de1dc4b438222ee8000afeeafdbe209adf337e  # tags/v0.21.0^0
+options=(debug)
+_commit=798cfab52bced65a749443faa16990ec3a8e0cfe  # tags/v0.23.0^0
 source=("git+https://github.com/eqrion/cbindgen#commit=$_commit")
 sha512sums=('SKIP')
 
-export CARGO_PROFILE_RELEASE_LTO=fat
-export CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
+# Use LTO
+export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
+
+# Use debug
+export CARGO_PROFILE_RELEASE_DEBUG=2
 
 pkgver() {
   cd cbindgen
