--- a/elinks/PKGBUILD
+++ b/elinks/PKGBUILD
@@ -6,16 +6,16 @@
 # Contributor: Ben <contrasutra@myrealbox.com>
 
 pkgname=elinks
-pkgver=0.14.3
+pkgver=0.15.0
 pkgrel=1
 pkgdesc="An advanced and well-established feature-rich text mode web browser."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://elinks.or.cz"
 license=('GPL')
-depends=('bzip2' 'expat>=2.0' 'gpm>=1.20.4' 'openssl' 'lua51' 'libidn'
+depends=('bzip2' 'expat>=2.0' 'gpm>=1.20.4' 'openssl' 'lua' 'libidn'
 	 'gc' 'tre' 'zlib')
 source=("elinks-$pkgver.tgz::https://github.com/rkd77/elinks/archive/v$pkgver.tar.gz")
-md5sums=('df921e9d3e2dd51a3999a211fa2a0ea4')
+md5sums=('52028102283424664c2ac2bdd23e991f')
 
 # todo: make it work with a modern 'js' package
 # (upstream has no interest in writing that)
@@ -28,7 +28,7 @@ build() {
               --sysconfdir=/etc \
               --disable-smb --without-x --enable-cgi \
               --enable-leds --enable-256-colors --enable-html-highlight \
-              --with-zlib --build=${CHOST}
+              --with-zlib --with-luapkg=lua54 --build=${CHOST}
   make
 }
 
