--- a/recode/PKGBUILD
+++ b/recode/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=recode
-pkgver=3.7.9
+pkgver=3.7.12
 pkgrel=1
 pkgdesc="Converts files between various character sets and usages"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/rrthomas/recode'
 license=('GPL3' 'LGPL3')
 depends=('glibc')
 makedepends=('python')
 source=("https://github.com/rrthomas/recode/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('e4320a6b0f5cd837cdb454fb5854018ddfa970911608e1f01cc2c65f633672c4')
+sha256sums=('4db1c9076f04dbaa159726f5000847e5e5a83aec8e5c64f8ca04383f6cda12d5')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
