* update assimp to 5.2.3-1

--- a/assimp/PKGBUILD
+++ b/assimp/PKGBUILD
@@ -3,36 +3,33 @@
 # Contributor: jepaan <jepaan at hotmail dot com>
 
 pkgname=assimp
-pkgver=5.2.2
+pkgver=5.2.3
 pkgrel=1
 pkgdesc="Library to import various well-known 3D model formats in an uniform manner"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 depends=('zlib' 'gcc-libs')
 makedepends=('cmake' 'ninja')
-url='https://assimp.org/'
-source=("$pkgname-$pkgver.tar.gz::https://github.com/assimp/assimp/archive/${pkgver}.tar.gz"
-	disable-werror.patch
-        "$pkgname-$pkgver-byteswap-macros.patch::https://patch-diff.githubusercontent.com/raw/assimp/assimp/pull/4367.patch")
-sha512sums=('7f11f3e53bdcd43a81be49ce2ad90d97769ae1c3c6157f57e8a0b2b41c72f394ad1afcdc5f5fa6fbfa1a44233fed4b9a578d5548ec5b9aae2113ef88c2ec843a'
-            '3c899b80df3db3e6e336913b0ccd7cf95552c30d378664e3b53c278d72ddf61084f01f642e09be65b39ab83115a4cf0eb9a695d648b7c3151f3466aacc31f811'
-            'a3455bea1a4f0f2b5f7dba71b01a58de72419a0449194a9e0577db5f1a8b09b92c36c815f7a64b26293523084a9d1313460bc9d3f6c100d995ab87d89b45c37b')
+url='https://github.com/assimp/assimp'
+source=("$pkgname-$pkgver.tar.gz::https://github.com/assimp/assimp/archive/v${pkgver}.tar.gz"
+	disable-werror.patch)
+sha512sums=('accc1020877b631431bd0bc2de20b530d7e8d234e960904070292a4a08e768c55d1d0cf614c68d38f099fab2d086420c3ffd3f729cb538b169c1275ef0be1eaa'
+            '3c899b80df3db3e6e336913b0ccd7cf95552c30d378664e3b53c278d72ddf61084f01f642e09be65b39ab83115a4cf0eb9a695d648b7c3151f3466aacc31f811')
 
 prepare() {
   cd ${pkgname}-${pkgver}
   patch -Np1 -i ${srcdir}/disable-werror.patch
-  #patch -Np1 -i ${srcdir}/${pkgname}-${pkgver}-byteswap-macros.patch
 }
 
 build() {
   cd ${pkgname}-${pkgver}
 
   cmake \
-      -Bbuild \
-      -GNinja \
-      -DCMAKE_INSTALL_PREFIX=/usr \
-      -DCMAKE_BUILD_TYPE=Release \
-      -DASSIMP_BUILD_SAMPLES=OFF
+    -Bbuild \
+    -GNinja \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DASSIMP_BUILD_SAMPLES=OFF
   ninja -C build
 }
 
