--- a/geocode-glib/PKGBUILD
+++ b/geocode-glib/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=geocode-glib
 pkgver=3.26.2+r9+g6047da3
-pkgrel=1
+pkgrel=2
 pkgdesc="Helper library for geocoding services"
 url="https://gitlab.gnome.org/GNOME/geocode-glib"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,6 +12,7 @@ license=(LGPL)
 depends=(glib2 json-glib libsoup)
 makedepends=(gobject-introspection git gtk-doc meson)
 provides=(libgeocode-glib.so)
+options=(debug)
 _commit=6047da31cfeb7f9fb33499dcc8db3b6fabc75428  # master
 source=("git+https://gitlab.gnome.org/GNOME/geocode-glib.git#commit=$_commit")
 sha256sums=('SKIP')
