* update geoip-database to 20220419-1

--- a/geoip-database/PKGBUILD
+++ b/geoip-database/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
 
 pkgname=('geoip-database' 'geoip-database-extra')
-pkgver=20210921
+pkgver=20220419
 pkgrel=1
-arch=('any')
+arch=(any)
 url="https://mailfud.org/geoip-legacy/"
 license=('CCPL:by-sa')
 makedepends=('util-linux')
@@ -16,12 +16,12 @@ source=(GeoIP-$pkgver.dat.gz::$_source_base/GeoIP.dat.gz
         GeoIPCityv6-$pkgver.dat.gz::$_source_base/GeoIPCityv6.dat.gz
         GeoIPASNum-$pkgver.dat.gz::$_source_base/GeoIPASNum.dat.gz
         GeoIPASNumv6-$pkgver.dat.gz::$_source_base/GeoIPASNumv6.dat.gz)
-sha256sums=('f587958909623b91f72ddb3bd8e5dcdd6fe2108f42dabfce432d6cba7afa7896'
-            '87ead4d05bce319fbb0bf6f19edf760f6365229c8d88786a6db08797764d2edd'
-            '49bd55c144021167380595938580e099420de0e6977418be7ca15428ba4f48bd'
-            'db2633aecb520414efe8bf198eb6602f2975743491a7a843da8d3926b9d085b7'
-            'dff82f95ab96a618aee4e0966ca0bf41412e082e0ec1bae18f13398474833584'
-            'fd39605dd14751a3dc42a32f5f620364353b14c85d04885dfa1a9d68d9827bae')
+sha256sums=('6f139d41a7b3f1ca0f8cb6aa5f0a907c4d7948ab1f95ddaa9ebf61b45dc20ddd'
+            '9448afe7e22908c0a10fd82a0e4c0a77812e7750c38caa673563c608775f6b0f'
+            '83aa8c2113a2b47bfb8518d7b5b00f2b3bc46e48ef6d556994d61e2d11d438cf'
+            '89baba3efde448eb8c594fc23e39fa1625823cfad00192a15df4366268c4ac6f'
+            '5ce8216a4a525e8037375412d5efa9aeb9eea332f23698b4ab57818a467f1f43'
+            '5e8cb68d5886579feb7d63c6f7df3b6e02d062c5aff7a9697b6f92f223418340')
 
 prepare() {
   cd "$srcdir"
