--- a/iproute2/PKGBUILD
+++ b/iproute2/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=iproute2
 pkgver=5.17.0
-pkgrel=2
+pkgrel=3
 pkgdesc='IP Routing Utilities'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
@@ -15,14 +15,17 @@ optdepends=('db: userspace arp daemon'
             'libcap: tipc'
             'linux-atm: ATM support')
 provides=('iproute')
-backup=('etc/iproute2/ematch_map'
+backup=('etc/iproute2/bpf_pinning'
+        'etc/iproute2/ematch_map'
+        'etc/iproute2/group'
+        'etc/iproute2/nl_protos'
         'etc/iproute2/rt_dsfield'
         'etc/iproute2/rt_protos'
         'etc/iproute2/rt_realms'
         'etc/iproute2/rt_scopes'
         'etc/iproute2/rt_tables')
 makedepends=('linux-atm')
-options=('staticlibs')
+options=('staticlibs' 'debug')
 validpgpkeys=('9F6FC345B05BE7E766B83C8F80A77F6095CDE47E') # Stephen Hemminger
 source=("https://www.kernel.org/pub/linux/utils/net/${pkgname}/${pkgname}-${pkgver}.tar."{xz,sign}
         '0001-make-iproute2-fhs-compliant.patch')
