* update gupnp to 1:1.4.3-1

--- a/gupnp/PKGBUILD
+++ b/gupnp/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: György Balló <ballogy@freestart.hu>
 
 pkgname=gupnp
-pkgver=1.4.0
+pkgver=1.4.3
 pkgrel=1
 epoch=1
 pkgdesc="An object-oriented UPNP framework"
@@ -13,21 +13,24 @@ license=(LGPL)
 depends=(glib2 gssdp util-linux libxml2)
 makedepends=(gobject-introspection gtk-doc vala meson git)
 optdepends=('python: gupnp-binding-tool')
-_commit=0175039d71cd72ee8c9b718e752d3fa81851359c  # tags/gupnp-1.4.0^0
+_commit=1e752b11dc51673c71c70bbf6deb34c96e3abd19  # tags/gupnp-1.4.3^0
 source=("git+https://gitlab.gnome.org/GNOME/gupnp.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/^gupnp-//;s/-/+/g'
+  cd gupnp
+  git describe --tags | sed 's/^gupnp-//;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd gupnp
+  
+  # Unbreak man page build
+  git revert -n 8795626a07963a91400773cfe04d4f2f1c37ff14
 }
 
 build() {
-  arch-meson $pkgname build -D gtk_doc=true
+  arch-meson gupnp build -D gtk_doc=true
   meson compile -C build
 }
 
