* update libindicator to 12.10.1-10

--- a/libindicator/PKGBUILD
+++ b/libindicator/PKGBUILD
@@ -9,7 +9,7 @@
 pkgbase=libindicator
 pkgname=("${pkgbase}-gtk"{2,3})
 pkgver=12.10.1
-pkgrel=9
+pkgrel=10
 pkgdesc='Set of symbols and convenience functions for Ayatana indicators'
 url='https://launchpad.net/libindicator'
 arch=(x86_64 powerpc64le)
@@ -38,7 +38,7 @@ build() {
       --sysconfdir=/etc \
       --with-gtk=3 \
       --disable-static \
-      --disable-tests --build=${CHOST}
+      --disable-tests
     sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
     make
   )
@@ -52,7 +52,7 @@ build() {
       --sysconfdir=/etc \
       --with-gtk=2 \
       --disable-static \
-      --disable-tests --build=${CHOST}
+      --disable-tests
     sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
     make
   )
