* update libblastrampoline to 5.1.0-1

--- a/libblastrampoline/PKGBUILD
+++ b/libblastrampoline/PKGBUILD
@@ -2,23 +2,28 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libblastrampoline
-pkgver=3.1.0
-pkgrel=2
+pkgver=5.1.0
+pkgrel=1
 pkgdesc='Using PLT trampolines to provide a BLAS and LAPACK demuxing library'
 arch=(x86_64 powerpc64le)
 url='https://github.com/JuliaLinearAlgebra/libblastrampoline'
 license=(MIT)
 depends=(glibc)
 source=(https://github.com/JuliaLinearAlgebra/libblastrampoline/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('f6136cc2b5d090ceca67cffa55b4c8af4bcee874333d49297c867abdb0749b5f')
+sha256sums=('55ac0c8f9cb91b2ed2db014be8394c9dadf3b5f26bd8af6dca9d6f20ca72b8fd')
+options=(!lto)
 
 build() {
   cd $pkgname-$pkgver/src
-  make F2C_AUTODETECTION=0 CFLAGS="$CFLAGS -fPIC" LDFLAGS="-shared $LDFLAGS"
+  make\
+    COMPLEX_RETSTYLE_AUTODETECTION=0 \
+    F2C_AUTODETECTION=0 \
+    LBT_CFLAGS="$CFLAGS -fPIC -D_GNU_SOURCE" \
+    LBT_LDFLAGS="-shared $LDFLAGS"
 }
 
 package() {
   cd $pkgname-$pkgver/src
-  make F2C_AUTODETECTION=0 prefix="$pkgdir"/usr install
+  make F2C_AUTODETECTION=0 COMPLEX_RETSTYLE_AUTODETECTION=0 prefix="$pkgdir"/usr install
   install -Dm644 ../LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
 }
