--- a/libqrtr-glib/PKGBUILD
+++ b/libqrtr-glib/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libqrtr-glib
 pkgver=1.2.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Qualcomm IPC Router protocol helper library"
 url="https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -11,21 +11,22 @@ license=(GPL2)
 depends=(glib2)
 makedepends=(gtk-doc meson git gobject-introspection)
 provides=(libqrtr-glib.so)
+options=(debug)
 _commit=8991f0e93713ebf4da48ae4f23940ead42f64c8c  # tags/1.2.2^0
 source=("git+https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
+  cd libqrtr-glib
   git describe --tags | sed 's/-rc/rc/;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd libqrtr-glib
 }
 
 build() {
-  arch-meson $pkgname build
+  arch-meson libqrtr-glib build
   meson compile -C build
 }
 
