--- a/libpipeline/PKGBUILD
+++ b/libpipeline/PKGBUILD
@@ -2,17 +2,20 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=libpipeline
-pkgver=1.5.3
+pkgver=1.5.6
 pkgrel=1
 pkgdesc="a C library for manipulating pipelines of subprocesses in a flexible and convenient way"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://nongnu.org/libpipeline/"
 license=('GPL')
 depends=('glibc')
+# https://gitlab.com/cjwatson/libpipeline
 source=(https://download.savannah.gnu.org/releases/libpipeline/$pkgname-$pkgver.tar.gz{,.asc})
-sha256sums=('5dbf08faf50fad853754293e57fd4e6c69bb8e486f176596d682c67e02a0adb0'
+sha256sums=('60fbb9e7dc398528e5f3a776af57bb28ca3fe5d9f0cd8a961ac6cebfe6e9b797'
             'SKIP')
-validpgpkeys=('AC0A4FF12611B6FCCF01C111393587D97D86500B') # Colin Watson <cjwatson@debian.org>
+#validpgpkeys=('AC0A4FF12611B6FCCF01C111393587D97D86500B') # Colin Watson <cjwatson@debian.org>
+#validpgpkeys=('87317259431038049C92C139F6DD330210FA4CD1') # "Colin Watson <cjwatson@flatline.org.uk>"
+validpgpkeys=('AC0A4FF12611B6FCCF01C111393587D97D86500B') # "Colin Watson <cjwatson@chiark.greenend.org.uk>"
 
 build() {
   cd $pkgname-$pkgver
