--- a/libspnav/PKGBUILD
+++ b/libspnav/PKGBUILD
@@ -4,22 +4,15 @@
 # Contributor: Jan Hambrecht <jaham at gmx dot net>
 
 pkgname=libspnav
-pkgver=0.2.3
-pkgrel=3
-pkgdesc="Alternative to the proprietary 3Dconnexion device driver and SDK for their 3D input devices"
+pkgver=1.0
+pkgrel=1
+pkgdesc='Alternative to the proprietary 3Dconnexion device driver and SDK for their 3D input devices'
 arch=(x86_64 powerpc64le)
 url='https://spacenav.sourceforge.net/'
 license=(GPL)
 depends=(libx11)
-source=("https://downloads.sourceforge.net/spacenav/$pkgname-$pkgver.tar.gz"
-        Makefile.patch)
-sha256sums=('7ae4d7bb7f6a5dda28b487891e01accc856311440f582299760dace6ee5f1f93'
-            'a49a9ac824ad41c043018094dd118ba92dd29f96fee92e70b640e47f643dde44')
-
-prepare() {
-  cd $pkgname-$pkgver
-  patch -p1 -i ../Makefile.patch
-}
+source=(https://github.com/FreeSpacenav/libspnav/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
+sha256sums=('8849b7f7826d750f6956cf8f4f53937f2359ab6da97d6c834c71d5f771212e7c')
 
 build() {
   cd $pkgname-$pkgver
