--- a/linux-firmware/PKGBUILD
+++ b/linux-firmware/PKGBUILD
@@ -5,13 +5,13 @@ pkgbase=linux-firmware
 pkgname=(linux-firmware-whence linux-firmware amd-ucode
          linux-firmware-{nfp,mellanox,marvell,qcom,liquidio,qlogic,bnx2x}
 )
-_tag=20220310
-pkgver=20220309.cd01f85
+_tag=20220411
+pkgver=20220411.705f19a
 pkgrel=1
 pkgdesc="Firmware files for Linux"
 url="https://git.kernel.org/?p=linux/kernel/git/firmware/linux-firmware.git;a=summary"
 license=('GPL2' 'GPL3' 'custom')
-arch=('any')
+arch=(any)
 makedepends=('git')
 options=(!strip)
 source=("git+https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git#tag=${_tag}?signed"
