* update partclone to 0.3.19-1

--- a/partclone/PKGBUILD
+++ b/partclone/PKGBUILD
@@ -6,21 +6,21 @@
 # Contributor: Ivan Sichmann Freitas
 
 pkgname=partclone
-pkgver=0.3.17
+pkgver=0.3.19
 pkgrel=1
 pkgdesc="Utilities to save and restore used blocks on a partition"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
 url="https://partclone.org"
 license=('GPL')
-depends=('progsreiserfs' 'ntfs-3g' 'nilfs-utils')
-source=(https://partclone.nchc.org.tw/download/unstable/$pkgname-$pkgver.tar.gz)
-md5sums=('faab4ae8a7629b77ed11f61bc50b753a')
+depends=('ntfs-3g' 'nilfs-utils')
+source=($pkgname-$pkgver.tar.gz::https://github.com/Thomas-Tsai/partclone/archive/$pkgver.tar.gz)
+md5sums=('c4e469396a402810f97370fbfa462934')
 
 build() {
   cd $pkgname-$pkgver
 
   ./autogen
-  ./configure --prefix=/usr --enable-extfs --enable-reiserfs --enable-fat \
+  ./configure --prefix=/usr --enable-extfs --enable-fat \
     --enable-hfsp --enable-btrfs --enable-ncursesw --enable-ntfs \
     --enable-exfat --enable-f2fs --enable-minix --enable-nilfs2 --enable-xfs \
     --sbindir=/usr/bin
