* update nitrogen to 1.6.1-4

--- a/nitrogen/PKGBUILD
+++ b/nitrogen/PKGBUILD
@@ -1,12 +1,13 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: James Rayner <james@archlinux.org>
 # Maintainer: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Sebastian Sareyko <public@nooms.de>
 
 pkgname=nitrogen
 pkgver=1.6.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Background browser and setter for X windows"
-arch=('x86_64' 'powerpc64le' 'powerpc')
+arch=(x86_64 powerpc64le powerpc)
 url="http://projects.l3ib.org/nitrogen/"
 license=('GPL')
 depends=('gtkmm' 'hicolor-icon-theme' 'librsvg')
