* update parallel to 20220422-1

--- a/parallel/PKGBUILD
+++ b/parallel/PKGBUILD
@@ -1,28 +1,28 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
-# Contributor: George Rawlinson <grawlinson@archlinux.org>
+# Maintainer: George Rawlinson <grawlinson@archlinux.org>
 # Contributor: Timothy Redaelli <timothy.redaelli@gmail.com>
 # Contributor: Vianney le Clément <vleclement AT gmail·com>
 # Contributor: Peter Simons <simons@cryp.to>
 
 pkgbase=parallel
 pkgname=('parallel' 'parallel-docs')
-pkgver=20220222
+pkgver=20220422
 pkgrel=1
 pkgdesc='A shell tool for executing jobs in parallel'
-arch=('any')
+arch=(any)
 url='https://www.gnu.org/software/parallel/'
 license=('GPL3')
 source=(
   "https://ftp.gnu.org/gnu/$pkgbase/$pkgbase-$pkgver.tar.bz2"{,.sig}
   '0001-Remove-citation-things.patch'
 )
-sha512sums=('3a5bb880fb4c4e2fa9ccda95359da36e16af5cdfc26095471613b03b994bf6fa2a8370933cc3a570069f5cb733475948b66f3d93cd78dfe20df5f0278148ba1e'
+sha512sums=('b4179c5ad936ed01753d91d75a012d6985dd8fb24f1e0d06fa7806352bfc59aeeedd42b15fd31b8294d25671aa474f885362c887875e79b32b613bfe1f9a262e'
             'SKIP'
-            'd0841cb0654ce7797874f9118cb44a57f84274b33e0984af29a67fd498b3f90f2a17450130490051d3f2191b533854989a27919b91c1f9af8ec0d6ba1d34fc99')
-b2sums=('55cc38cc93007be6c31a7a24df5fa2411aea07fe148caeb87de7756e6c8fcd47e47af72e90cd6d142469abdc653cd4de67e5994932f6db6bb123701cee72f88b'
+            '255f50448b791c53087f68b1650a2aab86b5f80efb13228ffa2903ab1b3465faf50a17be8e9a6eba6d6e46e83a11781c4c8480e14ec125d826fd1253cdae7ed0')
+b2sums=('5630c58a15cc6ce0dac0346188afa9916b18545a9da91854f3cae604fc3c2ced33fd3a5f17a2967693a2e28cbddb198a3e63372125721a8dc67af80cbf03e940'
         'SKIP'
-        '41a5a1a002e618fa903046580ea9ba7902e174b901a3d0d590eba38615a064fcdba85272f308285e536a56ef60aa71e4e32d5ec697d99825fea1074fd39d0121')
+        '410317d7ea9146d373daeba8d27738ed21598bb50b0a6ecb78a8b31eed4ebf0d1c2baf2a6f2bada62fce7ec2840e507604f48d00820498330fdfedbb18874e7a')
 validpgpkeys=('CDA01A4208C4F74506107E7BD1AB451688888888')
 
 prepare() {
