--- a/pass/PKGBUILD
+++ b/pass/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname='pass'
 pkgver=1.7.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Stores, retrieves, generates, and synchronizes passwords securely'
-arch=('any')
+arch=(any)
 url='https://www.passwordstore.org/'
 license=('GPL2')
 depends=('bash' 'gnupg' 'tree')
@@ -17,7 +17,8 @@ optdepends=('git: for Git support'
             'xdotool: to type passwords with passmenu'
             'qrencode: for QR code support'
             'vim-plugin-runtime: for redact_pass.vim'
-            'xclip: for clipboard support on X11')
+            'xclip: for clipboard support on X11'
+            'wl-clipboard: for clipboard support on Wayland')
 replaces=('passmenu')
 provides=('passmenu')
 conflicts=('passmenu')
