--- a/redshift/PKGBUILD
+++ b/redshift/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Lukas Fleischer <lfleischer@archlinux.org>
 # Contributor: Geoffrey Teale <tealeg@stop-squark>
 # Contributor: Mark, Huo Mian <markhuomian[at]gmail[dot]com>
@@ -6,9 +7,9 @@
 
 pkgname=redshift
 pkgver=1.12
-pkgrel=4
+pkgrel=5
 pkgdesc='Adjusts the color temperature of your screen according to your surroundings.'
-arch=('x86_64' 'powerpc64le' 'powerpc')
+arch=(x86_64 powerpc64le powerpc)
 url='http://jonls.dk/redshift/'
 license=('GPL3')
 depends=('geoclue2' 'libdrm' 'libxcb' 'libxxf86vm')
