--- a/r/PKGBUILD
+++ b/r/PKGBUILD
@@ -5,14 +5,14 @@
 # Contributor: K. Piche <kpiche@rogers.com>
 
 pkgname=r
-pkgver=4.1.3
-pkgrel=1
+pkgver=4.2.0
+pkgrel=2
 pkgdesc='Language and environment for statistical computing and graphics'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 url='https://www.r-project.org/'
 depends=(lapack libtiff pcre2 perl libxmu pango zip unzip curl icu which)
-makedepends=('java-environment>=11' gcc-fortran tk texlive-core)
+makedepends=(jdk-openjdk gcc-fortran tk texlive-core)
 optdepends=('tk: tcl/tk interface'
             'texlive-bin: latex sty files'
             'gcc-fortran: needed to compile some CRAN packages'
@@ -23,7 +23,7 @@ source=(https://cran.r-project.org/src/base/R-${pkgver%%.*}/R-$pkgver.tar.gz
 	r.desktop
 	r.png
 	R.conf)
-sha256sums=('15ff5b333c61094060b2a52e9c1d8ec55cc42dd029e39ca22abdaa909526fed6'
+sha256sums=('38eab7719b7ad095388f06aa090c5a2b202791945de60d3e2bb0eab1f5097488'
             '25b01ea93fa704884b65ba002d44d4e99725bd826997e8c73b6467df9f23c798'
             '1580d06a737951f4f3c903cbd514247d9071fc6868eb9c2de94bb999cc195cb1'
             'b7833166041b06f716b6a79095d27d4abd83549816dc53193213827139eae6ef')
@@ -36,6 +36,7 @@ prepare() {
 
 build() {
   cd R-$pkgver
+  CFLAGS+=" -ffat-lto-objects" \
   ./configure  --prefix=/usr \
                --libdir=/usr/lib \
                --sysconfdir=/etc/R \
