--- a/squid/PKGBUILD
+++ b/squid/PKGBUILD
@@ -5,14 +5,15 @@
 # Contributor: Kevin Piche <kevin@archlinux.org>
 
 pkgname=squid
-pkgver=5.1
+pkgver=5.5
 pkgrel=1
 pkgdesc='Full-featured Web proxy cache server'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://www.squid-cache.org'
 depends=('openssl' 'pam' 'perl' 'libltdl' 'libcap' 'nettle' 'gnutls' 'libnsl' 'libxml2'
 	'systemd-libs')
-makedepends=('krb5')
+makedepends=('krb5' 'libldap' 'systemd')
+optdepends=('libldap')
 license=('GPL')
 options=('emptydirs')
 backup=('etc/squid/squid.conf'
@@ -27,7 +28,7 @@ source=("http://www.squid-cache.org/Versions/v5/$pkgname-$pkgver.tar.xz"{,.asc}
         'squid.sysusers'
         'squid-rotate.service'
         'squid-rotate.timer')
-sha256sums=('4e36883c3743f376886acad520b1a15a2582383f04c6e18472b69c3721083428'
+sha256sums=('4e1d484d6476bdd67d4db17b17392112c93d5d989323751085a171421349106c'
             'SKIP'
             '11fb388f8679fd6461e0de006810ea608a3686fffda16904b0ed71f412be499c'
             '495f54e51f6ec1e4dce87090d76718aea1eb37559c4439d876dd39598163062a'
