--- a/speech-dispatcher/PKGBUILD
+++ b/speech-dispatcher/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=speech-dispatcher
 pkgname=(speech-dispatcher libspeechd)
 pkgver=0.11.1
-pkgrel=2
+pkgrel=3
 arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="High-level device independent layer for speech synthesis interface"
 url='http://www.freebsoft.org/speechd'
@@ -57,6 +57,7 @@ package_speech-dispatcher() {
   mkdir -p "${srcdir}"/libspeechd/usr/lib
   mv "${pkgdir}"/usr/include "${srcdir}"/libspeechd/usr
   mv "${pkgdir}"/usr/lib/libspeechd*so* "${srcdir}"/libspeechd/usr/lib
+  mv "${pkgdir}/usr/lib/pkgconfig" "${srcdir}/libspeechd/usr/lib"
 }
 
 package_libspeechd() {
