* update snowball to 2.2.0-2

--- a/snowball/PKGBUILD
+++ b/snowball/PKGBUILD
@@ -3,44 +3,41 @@
 
 pkgbase=snowball
 pkgname=(snowball libstemmer)
-pkgver=2.1.0
-pkgrel=1
+pkgver=2.2.0
+pkgrel=2
 pkgdesc="String processing language for creating stemming algorithms"
 url="https://snowballstem.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(BSD)
-depends=(glibc)
 makedepends=(git)
-_commit=4764395431c8f2a0b4fe18b816ab1fc966a45837  # tags/v2.1.0^0
+options=(debug)
+_commit=48a67a2831005f49c48ec29a5837640e23e54e6b  # tags/v2.2.0^0
 source=("git+https://github.com/snowballstem/snowball#commit=$_commit"
-        dynamiclib.patch)
+        dynamiclib.diff)
 sha256sums=('SKIP'
-            'fb8069aa4d1b5194fb8be231f87269f7a8fefdb3de0c20e2f0537fb4c9260328')
+            'c031da5a11bafa079df6c33b38b8795b65cf2c91cc6b452dcf2b10612288a3e6')
 
 pkgver() {
-  cd $pkgbase
-  git describe --tags | sed 's/^v//;s/-/+/g'
+  cd snowball
+  git describe --tags | sed 's/^v//;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgbase
-  git apply -3 ../dynamiclib.patch
+  cd snowball
+  git apply -3 ../dynamiclib.diff
 }
 
 build() {
-  cd $pkgbase
+  cd snowball
   make
 }
 
-check() {
-  cd $pkgbase
-
-  # Disabled - needs external test data
-  #make check
-}
+# No check - needs external test data
 
 package_snowball() {
-  cd $pkgbase
+  depends=(libstemmer)
+
+  cd snowball
 
   install -Dt "$pkgdir/usr/bin" snowball stemwords
 
@@ -49,15 +46,15 @@ package_snowball() {
 
 package_libstemmer() {
   pkgdesc="Stemming library supporting several languages"
+  depends=(glibc)
   provides=(libstemmer.so)
 
-  cd $pkgbase
-
-  install -Dt "$pkgdir/usr/lib" libstemmer.so.0.0.0
-  ln -s libstemmer.so.0.0.0 "$pkgdir/usr/lib/libstemmer.so.0"
-  ln -s libstemmer.so.0 "$pkgdir/usr/lib/libstemmer.so"
+  cd snowball
 
   install -Dt "$pkgdir/usr/include" -m644 include/libstemmer.h
+  install -Dm644 libstemmer.so.0 "$pkgdir/usr/lib/libstemmer.so.0.0.0"
+  ln -s libstemmer.so.0.0.0 "$pkgdir/usr/lib/libstemmer.so.0"
+  ln -s libstemmer.so.0 "$pkgdir/usr/lib/libstemmer.so"
 
   install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 COPYING
 }
