* update pegtl to 3.2.5-1

--- a/pegtl/PKGBUILD
+++ b/pegtl/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 pkgname=pegtl
-_gitcommit=7d039707cf835cea63daa78a717e18fcc5bcf95b
-pkgver=3.2.0
+_gitcommit=eeba7fa1180655bd683be620cc31be35607442ca
+pkgver=3.2.5
 pkgrel=1
 pkgdesc='Parsing Expression Grammar Template Library'
 url='https://github.com/taocpp/PEGTL'
-arch=('any')
+arch=(any)
 license=('MIT')
 makedepends=('git' 'cmake')
 source=(${pkgname}::"git+https://github.com/taocpp/PEGTL#commit=${_gitcommit}?signed")
