* update unittestpp to 2.0.0-4

--- a/unittestpp/PKGBUILD
+++ b/unittestpp/PKGBUILD
@@ -7,10 +7,10 @@
 
 pkgname=unittestpp
 pkgver=2.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc='Lightweight unit testing framework for C++'
 url='https://github.com/unittest-cpp/unittest-cpp/'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('MIT')
 depends=('gcc-libs')
 makedepends=('cmake')
@@ -27,7 +27,7 @@ build() {
   cd unittest-cpp-${pkgver}/build
   cmake .. \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release
+    -DCMAKE_CXX_FLAGS="$CXXFLAGS -ffat-lto-objects"
   make all
 }
 
