* fix linux-ppc64 for actual PowerMAC G5 systems' SATA

--- a/linux-ppc64/config
+++ b/linux-ppc64/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.17.2-arch1 Kernel Configuration
+# Linux/powerpc 5.17.5-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
 CONFIG_CC_IS_GCC=y
@@ -1836,7 +1836,7 @@ CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_PCIEAER=y
 CONFIG_PCIEAER_INJECT=m
-# CONFIG_PCIE_ECRC is not set
+CONFIG_PCIE_ECRC=y
 CONFIG_PCIEASPM=y
 CONFIG_PCIEASPM_DEFAULT=y
 # CONFIG_PCIEASPM_POWERSAVE is not set
@@ -1857,7 +1857,7 @@ CONFIG_PCI_ECAM=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
-# CONFIG_PCI_P2PDMA is not set
+CONFIG_PCI_P2PDMA=y
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_CPCI=y
 # CONFIG_HOTPLUG_PCI_SHPC is not set
@@ -1907,7 +1907,7 @@ CONFIG_PCI_J721E_EP=y
 #
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
-# CONFIG_PCI_EPF_TEST is not set
+CONFIG_PCI_EPF_TEST=m
 CONFIG_PCI_EPF_NTB=m
 # end of PCI Endpoint
 
@@ -1919,7 +1919,7 @@ CONFIG_PCI_SW_SWITCHTEC=m
 
 CONFIG_CXL_BUS=m
 CONFIG_CXL_MEM=m
-# CONFIG_CXL_MEM_RAW_COMMANDS is not set
+CONFIG_CXL_MEM_RAW_COMMANDS=y
 CONFIG_CXL_PMEM=m
 # CONFIG_PCCARD is not set
 # CONFIG_RAPIDIO is not set
@@ -2485,7 +2485,7 @@ CONFIG_ATA_BMDMA=y
 #
 CONFIG_ATA_PIIX=m
 CONFIG_SATA_DWC=m
-# CONFIG_SATA_DWC_OLD_DMA is not set
+CONFIG_SATA_DWC_OLD_DMA=y
 CONFIG_SATA_MV=m
 CONFIG_SATA_NV=m
 CONFIG_SATA_PROMISE=m
@@ -2515,7 +2515,7 @@ CONFIG_PATA_HPT3X3_DMA=y
 CONFIG_PATA_IT8213=m
 CONFIG_PATA_IT821X=m
 CONFIG_PATA_JMICRON=m
-# CONFIG_PATA_MACIO is not set
+CONFIG_PATA_MACIO=m
 CONFIG_PATA_MARVELL=m
 CONFIG_PATA_NETCELL=m
 CONFIG_PATA_NINJA32=m
@@ -2801,8 +2801,6 @@ CONFIG_BNXT_SRIOV=y
 CONFIG_BNXT_FLOWER_OFFLOAD=y
 CONFIG_BNXT_DCB=y
 CONFIG_BNXT_HWMON=y
-CONFIG_NET_VENDOR_BROCADE=y
-CONFIG_BNA=m
 CONFIG_NET_VENDOR_CADENCE=y
 CONFIG_MACB=m
 CONFIG_MACB_USE_HWSTAMP=y
@@ -2886,7 +2884,6 @@ CONFIG_ICE=m
 CONFIG_ICE_SWITCHDEV=y
 CONFIG_FM10K=m
 CONFIG_IGC=m
-CONFIG_NET_VENDOR_MICROSOFT=y
 CONFIG_JME=m
 CONFIG_NET_VENDOR_LITEX=y
 CONFIG_LITEX_LITEETH=m
@@ -2942,9 +2939,11 @@ CONFIG_LAN743X=m
 CONFIG_LAN966X_SWITCH=m
 CONFIG_NET_VENDOR_MICROSEMI=y
 # CONFIG_MSCC_OCELOT_SWITCH is not set
+CONFIG_NET_VENDOR_MICROSOFT=y
 CONFIG_NET_VENDOR_MYRI=y
 CONFIG_MYRI10GE=m
 CONFIG_FEALNX=m
+# CONFIG_NET_VENDOR_NI is not set
 CONFIG_NET_VENDOR_NATSEMI=y
 CONFIG_NATSEMI=m
 CONFIG_NS83820=m
@@ -2957,7 +2956,6 @@ CONFIG_NFP=m
 # CONFIG_NFP_APP_FLOWER is not set
 CONFIG_NFP_APP_ABM_NIC=y
 # CONFIG_NFP_DEBUG is not set
-# CONFIG_NET_VENDOR_NI is not set
 CONFIG_NET_VENDOR_8390=y
 CONFIG_NE2K_PCI=m
 CONFIG_NET_VENDOR_NVIDIA=y
@@ -2983,6 +2981,8 @@ CONFIG_QEDE=m
 CONFIG_QED_ISCSI=y
 CONFIG_QED_FCOE=y
 CONFIG_QED_OOO=y
+CONFIG_NET_VENDOR_BROCADE=y
+CONFIG_BNA=m
 CONFIG_NET_VENDOR_QUALCOMM=y
 CONFIG_QCA7000=m
 CONFIG_QCA7000_SPI=m
@@ -3005,6 +3005,11 @@ CONFIG_ROCKER=m
 CONFIG_NET_VENDOR_SAMSUNG=y
 CONFIG_SXGBE_ETH=m
 CONFIG_NET_VENDOR_SEEQ=y
+CONFIG_NET_VENDOR_SILAN=y
+CONFIG_SC92031=m
+CONFIG_NET_VENDOR_SIS=y
+CONFIG_SIS900=m
+CONFIG_SIS190=m
 CONFIG_NET_VENDOR_SOLARFLARE=y
 CONFIG_SFC=m
 CONFIG_SFC_MTD=y
@@ -3013,11 +3018,6 @@ CONFIG_SFC_SRIOV=y
 CONFIG_SFC_MCDI_LOGGING=y
 CONFIG_SFC_FALCON=m
 CONFIG_SFC_FALCON_MTD=y
-CONFIG_NET_VENDOR_SILAN=y
-CONFIG_SC92031=m
-CONFIG_NET_VENDOR_SIS=y
-CONFIG_SIS900=m
-CONFIG_SIS190=m
 CONFIG_NET_VENDOR_SMSC=y
 CONFIG_EPIC100=m
 CONFIG_SMSC911X=m
