--- a/p7zip/PKGBUILD
+++ b/p7zip/PKGBUILD
@@ -15,6 +15,7 @@ arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/jinfeihan57/p7zip"
 license=('LGPL' 'custom:unRAR')
 depends=('gcc-libs' 'sh')
+options=(!distcc)
 source=(https://github.com/jinfeihan57/p7zip/archive/v$pkgver/$pkgname-v$pkgver.tar.gz
         oemcp-iconv.patch::https://github.com/jinfeihan57/p7zip/commit/c104127e6a93.patch
         oemcp-cygwin.patch::https://github.com/jinfeihan57/p7zip/commit/0e0a1a8316b6.patch
