--- a/libblastrampoline/PKGBUILD
+++ b/libblastrampoline/PKGBUILD
@@ -5,13 +5,20 @@ pkgname=libblastrampoline
 pkgver=5.1.0
 pkgrel=1
 pkgdesc='Using PLT trampolines to provide a BLAS and LAPACK demuxing library'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://github.com/JuliaLinearAlgebra/libblastrampoline'
 license=(MIT)
 depends=(glibc)
-source=(https://github.com/JuliaLinearAlgebra/libblastrampoline/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('55ac0c8f9cb91b2ed2db014be8394c9dadf3b5f26bd8af6dca9d6f20ca72b8fd')
+source=(https://github.com/JuliaLinearAlgebra/libblastrampoline/archive/v$pkgver/$pkgname-$pkgver.tar.gz
+       ${pkgname}-riscv64.patch::https://patch-diff.githubusercontent.com/raw/JuliaLinearAlgebra/libblastrampoline/pull/68.patch)
+sha256sums=('55ac0c8f9cb91b2ed2db014be8394c9dadf3b5f26bd8af6dca9d6f20ca72b8fd'
+            'cfd1f1d6dfbad309c8db9dedc225c8ceabd5704b3c828cea137eecea1ca920e1')
 options=(!lto)
+
+prepare() {
+  cd $pkgname-$pkgver
+  patch -Np1 -i ${srcdir}/${pkgname}-riscv64.patch
+}
 
 build() {
   cd $pkgname-$pkgver/src
