* update openxr to 1.0.22-1

--- a/openxr/PKGBUILD
+++ b/openxr/PKGBUILD
@@ -1,7 +1,7 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 pkgname=openxr
-pkgver=1.0.19
+pkgver=1.0.22
 pkgrel=1
 pkgdesc='An open standard for virtual reality and augmented reality platforms and devices'
 arch=(x86_64 powerpc64le powerpc)
@@ -12,7 +12,7 @@ license=('APACHE')
 source=("https://github.com/KhronosGroup/OpenXR-SDK-Source/releases/download/release-${pkgver}/OpenXR-SDK-Source-release-${pkgver}.tar.gz"{,.asc}
         fix-gcc11.patch)
 validpgpkeys=(F029455EAB70F520FF4A03BD7F534CD56F00321E)
-sha512sums=('6b25d3ce5049f9c2ed449b187ade3b416798306c9705aa5c17709030f600b4356f98897025adf588377ec980be412e23dbf208462116e489d5b0857e4ab03d21'
+sha512sums=('92802d57a45ca1d697d3cea1b3f5619af4ba36156cb28c2c39b2295a74ebc45907caf371c916c54ec3be44a2f3ae447ffc1cd62f54b7b24f7a081408328c7651'
             'SKIP'
             '783726fb48dc4551dfec0da2f28049d73afe66d237db54f0914b5156b8a45c9d5edf2f9a4b97a8adbbbfa1157c07cd418dbd4d53252f2feb49e9420fde0b0840')
 
