--- a/monero/PKGBUILD
+++ b/monero/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: kpcyrd <kpcyrd[at]archlinux[dot]org>
 
 pkgname=monero
-pkgver=0.17.3.0
-_commit=ab18fea3500841fc312630d49ed6840b3aedb34d
-pkgrel=4
+pkgver=0.17.3.2
+_commit=424e4de16b98506170db7b0d7d87a79ccf541744
+pkgrel=1
 pkgdesc="Monero: the secure, private, untraceable peer-to-peer currency"
 license=('BSD')
 arch=(x86_64 powerpc64le powerpc)
@@ -20,7 +20,8 @@ source=(
     "git+https://github.com/trezor/trezor-common.git"
     "git+https://github.com/tevador/randomx.git"
     "monero.sysusers"
-    "monero.tmpfiles")
+    "monero.tmpfiles"
+)
 sha512sums=('SKIP'
             'SKIP'
             'SKIP'
@@ -56,8 +57,7 @@ build() {
   esac
 
   mkdir -p build && cd build
-  cmake -D BUILD_TESTS=ON -D CMAKE_BUILD_TYPE=release -D ARCH=default \
-        ${EXTRA_CMAKE_FLAGS} ../
+  cmake -D BUILD_TESTS=ON -D CMAKE_BUILD_TYPE=release -D ARCH=default ../
   make
 }
 
