--- a/libspatialite/PKGBUILD
+++ b/libspatialite/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=libspatialite
 pkgver=5.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="SQLite extension to support spatial data types and operations"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gaia-gis.it/fossil/libspatialite"
@@ -16,8 +16,7 @@ sha256sums=('eecbc94311c78012d059ebc0fae86ea5ef6eecb13303e6e82b3753c1b3409e98')
 
 build() {
   cd "${srcdir}"/$pkgname-$pkgver
-  ./configure --prefix=/usr \
-	      --build=${CHOST}
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
